etc/iptables.test.rules
*filter
:ssh_access - [0:0]
:http_access - [0:0]
:https_access - [0:0]
:vnc_access - [0:0]
:db_access - [0:0]

# Allows all loopback (lo0) traffic and drop all traffic to 127/8 that doesn't use lo0
-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -d 127.0.0.0/8 -j REJECT

# Accepts all established inbound connections
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

# Allows all outbound traffic
# You could modify this to only allow certain traffic
-A OUTPUT -j ACCEPT

# Allows HTTP and HTTPS connections from anywhere (the normal ports for websites)
-A INPUT -p tcp --dport 80 -j http_access
-A INPUT -p tcp --dport 443 -j https_access

# Allows SSH connections
# The --dport number is the same as in /etc/ssh/sshd_config
-A INPUT -p tcp -m state --state NEW --dport 22 -j ssh_access

# Allows VNC connection from anywhere
-A INPUT -p tcp --dport 5900 -j vnc_access

# Allow DB connections only from localhost

# Now you should read up on iptables rules and consider whether ssh access
# for everyone is really desired. Most likely you will only allow access from certain IPs.

# Allow ping
#  note that blocking other types of icmp packets is considered a bad idea by some
#  remove -m icmp --icmp-type 8 from this line to allow all kinds of icmp:
#  https://security.stackexchange.com/questions/22711
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

# log iptables denied calls (access via 'dmesg' command)
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7

# Reject all other inbound - default deny unless explicitly allowed policy:
-A INPUT -j REJECT
-A FORWARD -j REJECT

# Chain http_access
-A http_access -j ACCEPT

# Chain https_access
-A https_access -j ACCEPT

# Chain ssh_access
-A ssh_access -j ACCEPT
#-A ssh_access -s <SOME_IP_OR_HOSTNAME> -j ACCEPT

# Chain vnc_access
-A vnc_access -j ACCEPT

# Chain db_access


COMMIT
